# ccsds-idc

./: .gitignore  CMakeLists.txt  README
script/: 2greyscale.py  gen56x40.py  viewgrey.py
src/: bitset.c  bitset.h  bpe.c  bpe.h  bpe_block.c  bpe_block.h  bpe_encode.c  bpe_encode.h  bpe_encode_diff.c  bpe_encode_diff.h  bpe_segment.c  bpe_segment.h  dct.c  dwt.c  dwt.h  image_loader.c  image_loader.h  utils.h
